/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "SensorTypeEnum.proto";

message SensorStartRequest {
  required SensorType.Enum sensor_type = 1;
  required int64 refresh_interval = 2;
}
